links to game store complete

--- a/game3.html
+++ b/game3.html
@@ -14,8 +14,20 @@
 <body>
   <nav></nav>
   <div class="top-image">
-    <a href="https://play.google.com/store/apps/details?id=com.rovio.baba"><button><ion-icon name="arrow-down"></ion-icon>DOWNLOAD</button></a>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6" id="top">
+          <h1>Angry Birds 2</h1>
+          <p>Play the Biggest mobile game of all time. Topple towers and pop pigs in tons of multi-stage levels, and test your skills against other players to earn handsome rewards in the Arena.</p>
+          <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png" alt=""></a>
+        </div>
+        <div class="col-md-5">
+          <img src="img/ab2_characters.png" alt="">
+        </div>
+      </div>
+    </div>
   </div>
+
   <div class="game-description">
     <div class="container">
       <div class="row" id="first-row">
@@ -29,18 +41,66 @@
         </div>
       </div>
       <div class="row" id="second-row">
-        <div class="col-md-2">
+
+        <div class="col-md-12">
+          <p>Download and Play Angry Bird for free today</p>
+
           <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png" alt=""></a>
           <a href="https://itunes.apple.com/us/app/ab-classic/id343200656?mt=8" target="_blank"><img src="img/app-store-logo.png" alt=""></a>
+          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/amazon.png" alt=""></a>
+          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/ms.png" alt=""></a>
+
         </div>
-        <div class="col-md-10 content">
-          <p>Download Angry Birds at the App Store or Google Play for free today</p>
+<div class="row">
+
+  <div class="col-md-10"style="margin:0 auto;">
+    <h3>GAME SCREENSHOTS</h3>
+        <div id="demo" class="carousel slide" data-ride="carousel">
+
+          <!-- Indicators -->
+          <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+            <li data-target="#demo" data-slide-to="3"></li>
+            <li data-target="#demo" data-slide-to="4"></li>
+          </ul>
+
+          <!-- The slideshow -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/cs.jpg" alt="Los Angeles" style="height:500px; width:100%;">
+            </div>
+            <div class="carousel-item">
+              <img src="img/sc2.jpg" alt="Chicago" style="height:500px;width:100%;">
+            </div>
+            <div class="carousel-item">
+              <img src="img/cs4.png" alt="New York" style="height:500px;width:100%;">
+            </div>
+            <div class="carousel-item">
+              <img src="img/sc1.png" alt="Los Angeles" style="height:500px; width:100%;">
+            </div>
+            <div class="carousel-item">
+              <img src="img/cs4.jpg" alt="Los Angeles" style="height:500px; width:100%;">
+            </div>
+          </div>
+
+          <!-- Left and right controls -->
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+<span class="carousel-control-prev-icon"></span>
+</a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+<span class="carousel-control-next-icon"></span>
+</a>
+
         </div>
       </div>
+    </div>
+
 
       <div class="row" id="third-row">
         <div class="col-md-2">
-          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/amazon.png" alt=""></a>
+
         </div>
         <div class="col-md-10 content">
           <h3>Features</h3>
@@ -52,50 +112,13 @@
           </ul>
         </div>
       </div>
-      <h2>VIDEO</h2>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      <div class="row">
-        <h2>GAME SCREENSHOTS</h2>
-      </div>
-      <div id="demo" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-          <li data-target="#demo" data-slide-to="0" class="active"></li>
-          <li data-target="#demo" data-slide-to="1"></li>
-          <li data-target="#demo" data-slide-to="2"></li>
-          <li data-target="#demo" data-slide-to="3"></li>
-          <li data-target="#demo" data-slide-to="4"></li>
-        </ul>
-
-        <!-- The slideshow -->
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/sc1.png" alt="Los Angeles" style="height:500px; width:100%;">
-          </div>
-          <div class="carousel-item">
-            <img src="img/sc2.jpg" alt="Chicago" style="height:500px;width:100%;">
-          </div>
-          <div class="carousel-item">
-            <img src="img/sc3.jpeg" alt="New York" style="height:500px;width:100%;">
-          </div>
-          <div class="carousel-item">
-            <img src="img/sc4.jpeg" alt="Los Angeles" style="height:500px; width:100%;">
-          </div>
-          <div class="carousel-item">
-            <img src="img/sc5.jpeg" alt="Los Angeles" style="height:500px; width:100%;">
-          </div>
+      <div class="row" id="video-row">
+        <div class="col-md-8">
+          <h2>VIDEO</h2>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
-
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-
       </div>
+
     </div>
     <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
