formatted input forms

--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 		<form id="complaint">
 		<div class="form-group">
 		<label for="Your Name">Your Name</label>
-		<input type="text" class="form-control" id="name" placeholder="Name">
+		<input style="width:50%;" type="text" class="form-control" id="name" placeholder="Name">
 		<label for="Email">Email</label>
-		<input type="text" class="form-control" id="email" placeholder="Your Email">
+		<input style="width:50%;" type="text" class="form-control" id="email" placeholder="Your Email">
 		<label for="Email">Message</label>
-		<input type="text" class="form-control" id="message" placeholder="Game name & issue">
+		<input style="width:50%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
 		</div>
 		<button type="submit" class="btn btn-success">Submit</button>
 		</form>
@@ -185,13 +185,13 @@
 	</div>
 
 
-<div class="col-md-5">
+<div class="col-md-6">
 	<div class="jumbotron">
 		<h2>Subscribe for new games</h2>
 	<form id="subscribe">
 	<div class="form-group">
 	<label for="Your Name">Your Email</label>
-	<input type="text" class="form-control" id="emailSub" placeholder="Your Email">
+	<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
 
 	</div>
 	<button type="submit" class="btn btn-danger">Subscribe</button>
