--- a/index.html
+++ b/index.html
@@ -93,116 +93,131 @@
 	</div>
 
 	<!--- Jumbotron Games Header -->
-<div class="container-fluid">
-	<div class="row jumbotron">
-<div class="col-xs-12 col-sm-12 col-md-9 col-xl-10">
-	<h1 id="heading1">GAMES</h1>
+	<div class="container-fluid">
+		<div class="row jumbotron">
+			<div class="col-xs-12 col-sm-12 col-md-9 col-xl-10">
+				<h1 id="heading1">GAMES</h1>
 
-</div>
+			</div>
+		</div>
+
 	</div>
-
-</div>
 
 
 	<!--- Three Column Section Games  -->
-<div class="container-fluid padding">
-<div class="row text-center padding">
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/ab.png" >
-<h3>Angry Birds</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/fifa.png" >
-<h3>Fifa</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/hp.png" >
-<h3>Harry Potter</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/2k.png" >
-<h3>NBA 2k18</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/bike.png" >
-<h3>Bike Racing</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/cc.png" >
-<h3>Candy Crush</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/cr.png" >
-<h3>Clash Royale</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/cs.png" >
-<h3>Candy Sweet</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/pool.png" >
-<h3>8 Ball Pool</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/shooter.png" >
-<h3>Shooter</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/sniper.png" >
-<h3>Sniper</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/sub.png" >
-<h3>Subway Surfers</h3>
-</div>
-<div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="img/icons/word.png" >
-<h3>Word Cross</h3>
-</div>
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/ab.png">
+				<h3>Angry Birds</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/fifa.png">
+				<h3>Fifa</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/hp.png">
+				<h3>Harry Potter</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/2k.png">
+				<h3>NBA 2k18</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/word.png">
+				<h3>Word Cross</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/cc.png">
+				<h3>Candy Crush</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/cr.png">
+				<h3>Clash Royale</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/sub.png">
+				<h3>Subway Surfers</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/pool.png">
+				<h3>8 Ball Pool</h3>
+			</div>
+		</div>
+	</div>
 
-</div>
-<hr class="my-4">
-</div>
+	<div class="container-fluid">
+		<div class="row jumbotron">
+			<div class="col-xs-12 col-sm-12 col-md-9 col-xl-10">
+				<h1 id="heading1">UPCOMING GAMES</h1>
 
-	<!--- Two Column Section -->
-<div class="row">
+			</div>
+		</div>
+
+	</div>
+
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/shooter.png">
+				<h3>Shooter</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/sniper.png">
+				<h3>Sniper</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/cs.png">
+				<h3>Candy Sweet</h3>
+			</div>
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<img src="img/icons/bike.png">
+				<h3>Bike Racing</h3>
+			</div>
+
+		</div>
+		<hr class="my-4">
+	</div>
+
+	<!--- Two Column Section User feeback -->
+	<div class="row">
 
 		<div class="col-md-6">
 			<div class="jumbotron">
-			<h2>Report a problem</h2>
-		<form id="complaint">
-		<div class="form-group">
-		<label for="Your Name">Your Name</label>
-		<input style="width:60%;" type="text" class="form-control" id="name" placeholder="Name">
-		<label for="Email">Email</label>
-		<input style="width:60%;" type="text" class="form-control" id="email" placeholder="Your Email">
-		<label for="Email">Message</label>
-		<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
+				<h2>Report a problem</h2>
+				<form id="complaint">
+					<div class="form-group">
+						<label for="Your Name">Your Name</label>
+						<input style="width:60%;" type="text" class="form-control" id="name" placeholder="Name">
+						<label for="Email">Email</label>
+						<input style="width:60%;" type="text" class="form-control" id="email" placeholder="Your Email">
+						<label for="Email">Message</label>
+						<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
+					</div>
+					<button type="submit" class="btn btn-success">Submit</button>
+				</form>
+			</div>
 		</div>
-		<button type="submit" class="btn btn-success">Submit</button>
-		</form>
+
+
+		<div class="col-md-6">
+			<div class="jumbotron">
+				<h2>Subscribe for new games</h2>
+				<form id="subscribe">
+					<div class="form-group">
+						<label for="Your Name">Your Email</label>
+						<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
+
+					</div>
+					<button type="submit" class="btn btn-danger">Subscribe</button>
+
+				</form>
+
+			</div>
 		</div>
-	</div>
 
-
-<div class="col-md-6">
-	<div class="jumbotron">
-		<h2>Subscribe for new games</h2>
-	<form id="subscribe">
-	<div class="form-group">
-	<label for="Your Name">Your Email</label>
-	<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
 
 	</div>
-	<button type="submit" class="btn btn-danger">Subscribe</button>
-
-	</form>
-
-	</div>
-	</div>
-
-
-</div>
 
 
 
