--- a/game3.html
+++ b/game3.html
@@ -49,75 +49,79 @@
           <a href="https://itunes.apple.com/us/app/ab-classic/id343200656?mt=8" target="_blank"><img src="img/app-store-logo.png" alt=""></a>
           <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/amazon.png" alt=""></a>
           <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/ms.png" alt=""></a>
+          <a href="https://crackberry.com/tag/angry-birds-blackberry" target="_blank"><img src="img/bb.png" alt=""></a>
 
         </div>
-<div class="row">
+        <div class="row">
 
-  <div class="col-md-10"style="margin:0 auto;">
-    <h3>GAME SCREENSHOTS</h3>
-        <div id="demo" class="carousel slide" data-ride="carousel">
+          <div class="col-md-9" style="margin:0 auto;">
+            <h3>GAME SCREENSHOTS</h3>
+            <div id="demo" class="carousel slide" data-ride="carousel">
 
-          <!-- Indicators -->
-          <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-            <li data-target="#demo" data-slide-to="3"></li>
-            <li data-target="#demo" data-slide-to="4"></li>
-          </ul>
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+                <li data-target="#demo" data-slide-to="3"></li>
+                <li data-target="#demo" data-slide-to="4"></li>
+              </ul>
 
-          <!-- The slideshow -->
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="img/cs.jpg" alt="Los Angeles" style="height:500px; width:100%;">
-            </div>
-            <div class="carousel-item">
-              <img src="img/sc2.jpg" alt="Chicago" style="height:500px;width:100%;">
-            </div>
-            <div class="carousel-item">
-              <img src="img/cs4.png" alt="New York" style="height:500px;width:100%;">
-            </div>
-            <div class="carousel-item">
-              <img src="img/sc1.png" alt="Los Angeles" style="height:500px; width:100%;">
-            </div>
-            <div class="carousel-item">
-              <img src="img/cs4.jpg" alt="Los Angeles" style="height:500px; width:100%;">
-            </div>
-          </div>
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="img/cs.jpg" alt="Los Angeles" style="height:500px; width:100%;">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/sc2.jpg" alt="Chicago" style="height:500px;width:100%;">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/cs4.png" alt="New York" style="height:500px;width:100%;">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/sc1.png" alt="Los Angeles" style="height:500px; width:100%;">
+                </div>
+                <div class="carousel-item">
+                  <img src="img/cs4.jpg" alt="Los Angeles" style="height:500px; width:100%;">
+                </div>
+              </div>
 
-          <!-- Left and right controls -->
-          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#demo" data-slide="prev">
 <span class="carousel-control-prev-icon"></span>
 </a>
-          <a class="carousel-control-next" href="#demo" data-slide="next">
+              <a class="carousel-control-next" href="#demo" data-slide="next">
 <span class="carousel-control-next-icon"></span>
 </a>
 
+            </div>
+          </div>
+          <div class="col-md-3" style="padding-top:30px;">
+            <p>Published: 2017</p>
+            <p>Genre: Adventure</p>
+            <p>Developer: Game City</p>
+            <p>Platforms: iOS, Android, Windows Phone, Windows 8, Amazon</p>
+          </div>
         </div>
-      </div>
-    </div>
 
 
-      <div class="row" id="third-row">
-        <div class="col-md-2">
+        <div class="row" id="third-row">
+          <div class="col-md-5">
+            <h3>Features</h3>
+            <ul>
+              <li>Never-ending fun with dozens of unique levels</li>
+              <li>Fun and easy to learn, but a challenging game to master</li>
+              <li>Float your way through fantastical islands</li>
+              <li>Compatible for iPhone or Android!</li>
+            </ul>
+          </div>
+          <div class="col-md-7 content">
+            <h2>VIDEO</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
 
-        </div>
-        <div class="col-md-10 content">
-          <h3>Features</h3>
-          <ul>
-            <li>Never-ending fun with dozens of unique levels</li>
-            <li>Fun and easy to learn, but a challenging game to master</li>
-            <li>Float your way through fantastical islands</li>
-            <li>Compatible for iPhone or Android!</li>
-          </ul>
-        </div>
-      </div>
-      <div class="row" id="video-row">
-        <div class="col-md-8">
-          <h2>VIDEO</h2>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        </div>
-      </div>
 
     </div>
     <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
