added page icon plus styling

--- a/game2.html
+++ b/game2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,19 +17,19 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </head>
-<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
 
 <body>
   <div class="row">Navigation</div>
   <div class="container">
     <div class="jumbotron">
     </div>
-    <div class="container">
+    <div class="container" align="center">
 
-      <h1><p align="center">A New Harry Potter Mobile Game<p align="center">
-AVAILABLE NOW</h1>
-      <p align="center">
-        <img src="img/applestore.jpg" alt="download on apple store" align="center"><img src="img/googleplaystore.jpg" alt="download on google play store" align="center"></p>
+      <h2 id="caps">A New Harry Potter Mobile Game<br>
+AVAILABLE NOW</h2>
+      <p align="center"><a href="https://itunes.apple.com/nz/app/harry-potter-hogwarts-mystery/id1333256716">
+        <img src="img/applestore.jpg" alt="download on apple store" align="center" ></a><a href="https://play.google.com/store/apps/details?id=com.tinyco.potter&referrer=adjust_reftag%3DcZSsvAzHp2tKu%26utm_source%3DWebsite%26utm_campaign%3DJam_City%26utm_content%3Dunknown%26utm_term%3Dandroid_icon"><img src="img/googleplaystore.jpg" alt="download on google play store" align="center"></a></p>
 
       <form>
         <p align="center"> Sign up here <input type="text" name="email" value="" align="center">
@@ -42,74 +42,80 @@ AVAILABLE NOW</h1>
       <img src="img/line.jpg" alt=""></div>
     <div class="container">
       <h2><p align="center">TRAILER</h2></p>
-      <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
+      <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center" id="frame"></iframe>
     </div>
     <div id="divider" class="row"><br>
-          <img src="img/line.jpg" alt=""></div>
+      <img src="img/line.jpg" alt=""></div>
     <div class="container">
       <h3 id="aha" align="center">What Is </h3>
       <h2 id="aha" align="center">Harry Potter: Hogwarts Mystery?</h2><br>
-      <p align="center"> Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive
-        Entertainment, the games label dedicated to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
+      <p align="center"> Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive Entertainment, the games label dedicated
+        to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
     </div>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
-    <div id="divi" class="row">
-        <p align="center"><h2>GAME FEATURES</h2></p>
+    <div id="divis" class="row">
+      <p align="center">
+        <h2 id="try">Game Features</h2></p>
     </div>
     <div class="container">
-    <div class="row" id="boop">
-      <div class="col-md-5">
-        <img src="img/hogwarts.jpg" alt="hogwarts school" id="blur">
-      </div>
-      <div class="col-md-7">
-        <p><h3 id="try">Live your Hogwarts Experience</h3>Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying,
-          Transfiguration, potion brewing and more!</p>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <p><h3 id="try">Customize Your Character</h3> Create your own in-game character as a Hogwarts student with our avatar creator! From hairstyle to casual outfits worn outside classes, you can customize the details of your character.</p>
-      </div>
-      <div class="col-md-5">
-        <img src="img/owned.jpg" alt="hogwarts school" id="blur">
+      <div class="row" id="divi">
+        <div class="col-md-5">
+          <img src="img/hogwarts.jpg" alt="hogwarts school" id="blur">
+        </div>
+        <div class="col-md-7">
+          <p>
+            <h3 id="try">Live your Hogwarts Experience</h3>Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying, Transfiguration, potion
+            brewing and more!</p>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <img src="img/whichhouse.jpg" alt="hogwarts school" id="blur">
-      </div>
-      <div class="col-md-5">
-        <p><h3 id="try">Choose Your Hogwarts House</h3> Are you a brave Gryffindor, an ambitious Slytherin, a witty Ravenclaw, or a loyal Hufflepuff? In Harry Potter: Hogwarts Mystery, you will be able to select the house you feel you most identify with.</p>
-      </div>
-    </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <p><h3 id="try">Learn New Spells & Potions</h3> Attend classes at Hogwarts and learn to cast spells, brew potions and more! Brew potions under Professor Snape’s critical eye, master Transfiguration with Professor McGonagall, and learn Charms from the esteemed Professor
-          Flitwick. This is your chance to finally become the witch or wizard you aspire to be!
-        </p>
-      </div>
-      <div class="col-md-5">
-        <img src="img/spells.jpeg" alt="hogwarts school" id="blur">
+    <div class="container">
+      <div class="row" id="divi">
+        <div class="col-md-7">
+          <p>
+            <h3 id="try">Customize Your Character</h3> Create your own in-game character as a Hogwarts student with our avatar creator! From hairstyle to casual outfits worn outside classes, you can customize the details of your character.</p>
+        </div>
+        <div class="col-md-5">
+          <img src="img/owned.jpg" alt="hogwarts school" id="blur">
+        </div>
       </div>
     </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5">
-        <img src="img/friends1.jpg" alt="hogwarts school" id="blur">
-      </div>
-      <div class="col-md-5"><p><h3 id="try">Create Lasting Friendships</h3> Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests
-        and adventures!</p>
+    <div class="container" id="pax">
+      <div class="row" id="divi">
+        <div class="col-md-5">
+          <img src="img/whichhouse.jpg" alt="hogwarts school" id="blur">
+        </div>
+        <div class="col-md-7">
+          <p>
+            <h3 id="try">Choose Your Hogwarts House</h3> Are you a brave Gryffindor, an ambitious Slytherin, a witty Ravenclaw, or a loyal Hufflepuff? In Harry Potter: Hogwarts Mystery, you will be able to select the house you feel you most identify with.</p>
+        </div>
       </div>
     </div>
-  </div>
+    <div class="container">
+      <div class="row" id="divi">
+        <div class="col-md-8">
+          <p>
+            <h3 id="try">Learn New Spells & Potions</h3> Attend classes at Hogwarts and learn to cast spells, brew potions and more! Brew potions under Professor Snape’s critical eye, master Transfiguration with Professor McGonagall, and learn Charms from the esteemed Professor Flitwick. This is
+            your chance to finally become the witch or wizard you aspire to be!
+          </p>
+        </div>
+        <div class="col-md-4">
+          <img src="img/spells.jpeg" alt="hogwarts school" id="blur">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row" id="divi">
+        <div class="col-md-5">
+          <img src="img/friends1.jpg" alt="hogwarts school" id="blur">
+        </div>
+        <div class="col-md-7">
+          <p>
+            <h3 id="try">Create Lasting Friendships</h3> Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests and adventures!</p>
+        </div>
+      </div>
+    </div>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
 
@@ -117,7 +123,7 @@ AVAILABLE NOW</h1>
       <h3><p id="caps" align="center">Want More Content On</h3>
       <h2><p id="caps" align="center"><strong>Harry Potter: Hogwarts Mystery?<strong></h2>
       <h3><p id="caps" align="center">Follow us on:</h3></p>
-    <p id="fret" align="center"><a href="#" class="fa fa-facebook"></a> <a href="#" class="fa fa-twitter"></a> <a href="#" class="fa fa-instagram"></a>
+    <p id="fret" align="center"><a href="https://www.facebook.com/HPHogwartsMystery" class="fa fa-facebook"></a> <a href="https://twitter.com/HogwartsMystery" class="fa fa-twitter"></a> <a href="https://www.instagram.com/HPHogwartsMystery/" class="fa fa-instagram"></a>
     </p>
 
     <div class="row" id="row-1">
@@ -137,15 +143,6 @@ AVAILABLE NOW</h1>
     <div class="row">
       CONTACT US
     </div>
-
-
-
-
-
-
-
-
-
 
   </div>
 </body>
