--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	<!--- Jumbotron Games Header -->
 	<div class="container-fluid">
 		<div class="row jumbotron">
-			<div class="col-xs-12 col-sm-12 col-md-9 col-xl-10">
+			<div class="col-sm-12">
 				<h1 id="heading1">GAMES</h1>
 
 			</div>
@@ -144,11 +144,13 @@
 				<h3>8 Ball Pool</h3>
 			</div>
 		</div>
+		<hr class="my-4">
+
 	</div>
 
 	<div class="container-fluid">
 		<div class="row jumbotron">
-			<div class="col-xs-12 col-sm-12 col-md-9 col-xl-10">
+			<div class="col-sm-12">
 				<h1 id="heading1">UPCOMING GAMES</h1>
 
 			</div>
@@ -210,15 +212,17 @@
 
 					</div>
 					<button type="submit" class="btn btn-danger">Subscribe</button>
-
 				</form>
-
+				<br>
+				<iframe style="height:10%;" src="https://giphy.com/embed/3oz8xPjPPvOwrGjip2" width="280" height="270" frameBorder="0" class="giphy-embed" allowFullScreen margin="0"></iframe>
 			</div>
+
 		</div>
 
 
 	</div>
 
+	<hr class="my-4">
 
 
 	<!--- Fixed background -->
@@ -237,10 +241,63 @@
 
 
 	<!--- Connect -->
+	<div class="container-fluid padding">
+		<div class="row text-center padding">
+			<div class="col-12">
+				<h2>Connect</h2>
+			</div>
+			<div class="col-12 social padding">
+				<a href="#"><i class="fab fa-facebook"></i></a>
+				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="#"><i class="fab fa-google-plus-g"></i></a>
+				<a href="#"><i class="fab fa-instagram"></i></a>
+				<a href="#"><i class="fab fa-youtube"></i></a>
 
+			</div>
+		</div>
+
+	</div>
 
 	<!--- Footer -->
+	<footer>
+		<div class="container-fluid padding">
+			<div class="row text-center">
+				<div class="col-md-4">
+					<img src="img/logo.png">
+					<hr class="light">
+					<p>555-555-55555</p>
+					<p>gamecity@gmail.com</p>
+					<p>100 Nairobi</p>
+					<p>Ngong, Nairobi, 001000</p>
 
+				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Our Partners</h5>
+					<hr class="light">
+					<p>Google Playstore</p>
+					<p>Apple Appstore</p>
+					<p>Windows Phone Store</p>
+
+				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Supported Platforms</h5>
+					<hr class="light">
+					<p>Android</p>
+					<p>iOS</p>
+					<p>Windows Phone</p>
+
+				</div>
+				<div class="col-12">
+					<hr class="light">
+					<h5>&copy; cherucole</h5>
+
+				</div>
+			</div>
+
+		</div>
+	</footer>
 
 </body>
 
