added drop down buttons

--- a/index.html
+++ b/index.html
@@ -28,9 +28,22 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Home</a>
 					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Games</a>
-					</li>
+					<li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Games
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="game3.html">Angry Birds</a>
+          <a class="dropdown-item" href="game2.html">Harry Potter</a>
+          <a class="dropdown-item" href="game1.html">Fifa 18</a>
+					<a class="dropdown-item" href="#">Word Cross</a>
+					<a class="dropdown-item" href="#">Subway Surfers</a>
+					<a class="dropdown-item" href="#">Clash Royale</a>
+					<a class="dropdown-item" href="#">Nba2K18</a>
+					<a class="dropdown-item" href="#">8 Ball Pool</a>
+
+        </div>
+      </li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">About Us</a>
 					</li>
