navigation bar from master added

--- a/game2.html
+++ b/game2.html
@@ -20,7 +20,46 @@
 <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
 
 <body>
-  <div class="row">Navigation</div>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<span class="navbar-toggler-icon"></span>
+</button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Games
+        </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="game3.html">Angry Birds</a>
+              <a class="dropdown-item" href="game2.html">Harry Potter</a>
+              <a class="dropdown-item" href="game1.html">Fifa 18</a>
+              <a class="dropdown-item" href="#">Word Cross</a>
+              <a class="dropdown-item" href="#">Subway Surfers</a>
+              <a class="dropdown-item" href="#">Clash Royale</a>
+              <a class="dropdown-item" href="#">Nba2K18</a>
+              <a class="dropdown-item" href="#">8 Ball Pool</a>
+
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Support</a>
+          </li>
+
+        </ul>
+
+      </div>
+    </div>
+  </nav>
   <div class="container">
     <div class="jumbotron">
     </div>
@@ -140,10 +179,6 @@ AVAILABLE NOW</h2>
       </div>
       <div class="col-md-1"><img src="img/portkey.jpg" alt="portkey"></div>
     </div>
-    <div class="row">
-      CONTACT US
-    </div>
-
   </div>
 </body>
 
