--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -71,13 +71,15 @@
 		</ol>
 		<div class="carousel-inner" role="listbox">
 			<div class="carousel-item active">
-				<a href="https://play.google.com/store/apps/details?id=com.rovio.baba">
+				<a href="game3.html">
 	      <img class="d-block img-fluid" src="img/carousel/bannerab.jpg" alt="First slide" style="width:100%;">
 			</a>
 
 			</div>
 			<div class="carousel-item">
+				<a href="game1.html">
 				<img class="d-block img-fluid" src="img/carousel/bannerfifa.jpg" alt="Second slide" style="width:100%;">
+				</a>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block img-fluid" src="img/carousel/bannersubway.jpg" alt="Third slide" style="width:100%;">
@@ -92,6 +94,7 @@
 				<img class="d-block img-fluid" src="img/carousel/bannerclash.jpg" alt="Third slide" style="width:100%;">
 			</div>
 			<div class="carousel-item">
+				<a href="game2.html">
 				<img class="d-block img-fluid" src="img/carousel/bannerhp.png" alt="Third slide" style="width:100%;">
 			</div>
 		</div>
